--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,7 @@
+
+
 <div class="text-center my-3">
-    <h2 class="mb-4 ">Welcome to Port Hotel</h2>
+    <h2 class="mb-4 ">Welcome to Sunshine Hotel</h2>
     <button  class="btn btn-primary mx-2"  [routerLink]="['/new']">Create a new reservation</button>
     <button  class="btn btn-primary mx-2"  [routerLink]="['/list']">View all reservation</button>
 </div>
