--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+
+body{
+    background: url('assets/background.avif') no-repeat center center/cover;
+    height: 100vh;
+    width: 100vh;
+}
